--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A financial account creation API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon -r dotenv/config src/server.ts"
   },
   "keywords": [],
   "author": "",
