--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "mongoose": "^8.15.0",
-    "winston": "^3.17.0"
-  },
-  "devDependencies": {
+    "winston": "^3.17.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2"
   }
 }
