--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "npx tsc",
+    "postinstall": "npm run build",
     "start": "node dist/server.js",
     "dev": "nodemon -r dotenv/config src/server.ts"
   },
