--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "build": "npx tsc && cp -r public dist/",
+    "postbuild": "cp -r public dist/ || xcopy public dist\\public /E /I",
     "postinstall": "npm run build",
     "start": "node dist/server.js",
     "dev": "nodemon -r dotenv/config src/server.ts"
@@ -24,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "mongoose": "^8.15.0",
